--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
     "pca.fit(abalone[abalone_numeric_columns].dropna())\n",
     "abalone_components = pd.DataFrame(pca.components_, columns=abalone_numeric_columns)\n",
     "\n",
-    "p16 = abalone[abalone_numeric_columns] @ abalone_components.iloc[0].T"
+    "p16 = pd.DataFrame(abalone[abalone_numeric_columns] @ abalone_components.iloc[0].T)"
    ]
   },
   {
