--- a/homework.ipynb
+++ b/homework.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "[4177 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "9.4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "array([1.6, 6.7, 1.9, 9.8, 9.3, 8.2, 7.4, 7. , 0.7, 5.4])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "np.float64(9.8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "5.2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "       [7.1, 8.7, 5.9, 8.8]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "np.float64(4.7)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "       [4.2, 6.2]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "array([ 8., 11.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "       [0.3, 0.7]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "       [0.8, 0.7]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "       [0.62, 0.58]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "(3, 2)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[2048, 1024]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "[2048, 1048576, 1048576, 1024]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "np.float64(5.0)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "       [0, 0, 1]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "       [6, 1, 3]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        "np.int64(13)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1069,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "[4, 4]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
     "pca.fit(abalone[abalone_numeric_columns].dropna())\n",
     "abalone_components = pd.DataFrame(pca.components_, columns=abalone_numeric_columns)\n",
     "\n",
-    "p16 = pd.DataFrame(abalone[abalone_numeric_columns] @ abalone_components.iloc[0].T).transpose()"
+    "p16 = abalone_components.iloc[0]"
    ]
   },
   {
