tweak p16 for the 3rd time

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
     "pca.fit(abalone[abalone_numeric_columns].dropna())\n",
     "abalone_components = pd.DataFrame(pca.components_, columns=abalone_numeric_columns)\n",
     "\n",
-    "p16 = abalone_components.iloc[0]"
+    "p16 = abalone_components.head(1)"
    ]
   },
   {
