tweak p16 for the 4th time

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1178,14 +1178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "abalone_numeric_columns = [c for c in abalone.columns if abalone[c].dtype.name == 'float64']\n",
+    "abalone_numeric_columns = [c for c in abalone.columns if abalone[c].dtype.name in ['float64', 'int64']]\n",
     "\n",
     "pca = PCA()\n",
     "pca.fit(abalone[abalone_numeric_columns].dropna())\n",
